dark mode switch tooltip color fixes #101

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -93,6 +93,18 @@
 @source "../../storage/framework/views/*.php";
 @source "../**/*.blade.php";
 
+/* Tool tip for apex charts */
+
+[data-theme=dark] .apexcharts-tooltip-title {
+  background: #292933 !important;
+  border-bottom: 1px solid #393939  !important;
+}
+[data-theme=dark] .apexcharts-tooltip {
+  background: #20202A !important;
+  border-color: #393939 !important;
+}
+
+
 /* Wiggle animation */
 @keyframes wiggle {
   10%, 90% {
